--- a/example.css
+++ b/example.css
@@ -81,10 +81,14 @@ main{
     width: 450px;
     margin: 20px 20px;
     position: relative;
+
+    /* sorulacak */
+    /* transition: box-shadow 1s linear; */
 }
 .container-card:hover{
     box-shadow: 0 0 80px white;
     /* animation: card 1s ease-in-out alternate infinite;  */
+    
     }
 /* @keyframes card{
     0%   {top: 0px; width: 450px;}
